# telemetry-hub

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  Taskfile.yml  docker-bake.hcl
.github/: CODEOWNERS  dependabot.yml
api-layer/: .dockerignore  (+6 more)
metrics_computation_engine/: .env.example  Dockerfile  README.md  pyproject.toml  test_opik_adapter_basic.py  test_opik_comprehensive.py  test_ragas_adapter_basic.py  test_ragas_comprehensive.py
metrics_computation_engine/plugins/adapters/deepeval_adapter/: README.md  pyproject.toml
metrics_computation_engine/plugins/adapters/opik_adapter/: README.md  pyproject.toml
metrics_computation_engine/plugins/adapters/ragas_adapter/: README.md  pyproject.toml
metrics_computation_engine/plugins/example_plugin/: pyproject.toml
metrics_computation_engine/plugins/example_plugin/tests/: test_span_counter.py
metrics_computation_engine/plugins/mce_metrics_plugin/: README.md  pyproject.toml
metrics_computation_engine/src/metrics_computation_engine/: cli.py  constants.py  dal_cli.py  logger.py  main.py  model_handler.py  processor.py  registry.py  server.py  types.py  util.py
metrics_computation_engine/src/metrics_computation_engine/core/: data_parser.py
metrics_computation_engine/src/metrics_computation_engine/dal/: __init__.py  annotations.py  api_client.py  client.py  sessions.py  traces.py  utils.py
metrics_computation_engine/src/metrics_computation_engine/examples/: README.md  llm_metrics_demo.py  load_clickhouse_db.sh  mce-demo.py  mce_as_package_test.py  service_test.py  simple_service_test.py  test-jaeger-session-entity.py
metrics_computation_engine/src/metrics_computation_engine/llm_judge/: jury.py  llm.py  prompts.py
metrics_computation_engine/src/metrics_computation_engine/metrics/: base.py
metrics_computation_engine/src/metrics_computation_engine/mock_llm_proxy/: __init__.py  __main__.py  cli.py  config.py  schemas.py  server.py  settings.py
metrics_computation_engine/src/metrics_computation_engine/models/: eval.py  requests.py  session.py  span.py
(+184 files in other folders)
